--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="News Monkey is a new app which can be used to grab daily quick news bites.
-      if you are interested in news, weather, politics, sports news, newsMonkey is for you!"
+      content="News Master is a new app which can be used to grab daily quick news bites.
+      if you are interested in news, weather, politics, sports news, newsMaster is for you!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>News Monkey</title>
+    <title>News Master</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body>
